changing data format of requests
