# src/entities/PostData.ts
@@ -1,0 +1,6 @@
+export interface PostData {
+  title: string;
+  description: string;
+  content: string;
+  username: string;
+}
